--- a/app/views/moviegoers/index.html.erb
+++ b/app/views/moviegoers/index.html.erb
@@ -7,3 +7,7 @@
     <li> <%= link_to moviegoer.name, moviegoer  %> </li>
   <% end %>
 </ul>
+
+<br>
+
+<%= link_to 'Add Moviegoer', new_moviegoer_path %>
