--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Movie', new_movie_path %>
+<%= link_to 'New Movie', new_movie_path %> | <%= link_to 'Moviegoers List', moviegoers_path %>
