--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -20,5 +20,15 @@
   <%= @movie.release_date %>
 </p>
 
+<h2> Reviews: </h2>
+  <% if @movie.reviews.empty? %>
+    <p>No reviews for this movie...</p>
+  <% else %>
+    <% @movie.reviews.each do |r| %>
+      <% # to implement %>
+    <% end %>
+  <% end %>
+
+
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
 <%= link_to 'Back', movies_path %>
