--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -24,11 +24,13 @@
   <% if @movie.reviews.empty? %>
     <p>No reviews for this movie...</p>
   <% else %>
+    <ul>
     <% @movie.reviews.each do |r| %>
-      <% # to implement %>
+      <li> <%= r.potatoes %> -  <%= Moviegoer.find(r.moviegoer_id).name %> </li>     
     <% end %>
+    </ul>
   <% end %>
 
-
+<%= link_to 'Add Review', new_movie_review_path(@movie) %> |
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
 <%= link_to 'Back', movies_path %>
