--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,6 +2,18 @@
 
 <%= form_with model: [ @movie, @review ] do |form| %>
 
+      <% if @review.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
+
+        <ul>
+          <% @review.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
     <div class="field">
       <%= form.label :potatoes, 'Votes' %><br>
       <%= form.select :potatoes, [1,2,3,4,5] %>
