update with rating retrieve

--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -19,7 +19,7 @@
   <% # changed with a selection %>
   <div class="field">
     <%= form.label :rating %><br>
-    <%= form.select :rating, ['G','PG','PG-13','R','NC-17'] %>
+    <%= form.select :rating, ['','G','PG','PG-13','R','NC-17'] %>
   </div>
 
   <div class="field">
