added javascript example

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Movies</h1>
-
+<div id ="movies">
 <table>
   <thead>
     <tr>
@@ -15,7 +15,8 @@
 
   <tbody>
     <% @movies.each do |movie| %>
-      <tr>
+    <!-- class adult to any table rows for movies rated other than G or PG -->
+      <tr class="<%= ('adult' unless movie.rating =~ /^G|PG$/) %>">
         <td><%= movie.title %></td>
         <td><%= movie.rating %></td>
         <td><%= movie.description %></td>
@@ -27,7 +28,10 @@
     <% end %>
   </tbody>
 </table>
+</div>
 
 <br>
 
 <%= link_to 'New Movie', new_movie_path %> | <%= link_to 'Moviegoers List', moviegoers_path %>
+
+<%= javascript_pack_tag 'movie_list_filter' %>
