--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -35,3 +35,5 @@
 <%= link_to 'New Movie', new_movie_path %> | <%= link_to 'Moviegoers List', moviegoers_path %>
 
 <%= javascript_pack_tag 'movie_list_filter' %>
+
+<%= javascript_pack_tag 'movie_popup' %>
